# pems

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  README.md  compose.yml  data.json  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: codeql.yml  dependabot-triage.yml  deploy-troubleshoot.yml  deploy.yml  mkdocs.yml  tests-pytest.yml  tests-ui.yml
appcontainer/: Dockerfile
copilot/streamlit/: manifest.yml
copilot/web/: manifest.yml
deployment/hotfix/: index.html
deployment/release/: index.html
deployment/rollback/: index.html
development/: index.html
development/pems_data/: index.html
development/pems_data/cli/: index.html
development/pems_data/reference/caching-layer/: index.html
development/pems_data/reference/data-sources/: index.html
development/pems_data/reference/service-factory/: index.html
development/pems_data/reference/services/: index.html
docs/: README.md  requirements.txt
docs/development/: README.md
docs/development/pems_data/: README.md  cli.md
docs/development/pems_data/reference/: caching-layer.md  data-sources.md  service-factory.md  services.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_01857045b9de692d_context_processors_py.html  z_01857045b9de692d_middleware_py.html  z_0e3475169604ba25_apps_py.html  z_0e3475169604ba25_urls_py.html  z_1d01418168d4a0a8_stations_py.html  z_266e414865bcdd04_apps_py.html  z_2ea51872b0c7c631_admin_py.html  z_2ea51872b0c7c631_apps_py.html  z_2ea51872b0c7c631_models_py.html  z_2ea51872b0c7c631_urls_py.html  z_2ea51872b0c7c631_views_py.html  z_41669c085461d3bb___init___py.html  z_41669c085461d3bb_cache_py.html  z_41669c085461d3bb_serialization_py.html  z_43debbcf9afc630a___init___py.html  z_43debbcf9afc630a_settings_py.html  z_462a4dd31a687c2e_apps_py.html  z_629c32a36b1ff97a_ensure_db_py.html  z_631d0c12225422f4_0001_initial_py.html  z_8210505d354b5ec0_main_py.html  z_8210505d354b5ec0_utils_py.html  z_85b1c375a82dac04_0001_initial_py.html  z_8b02910fb2e20e02_main_py.html  z_8b02910fb2e20e02_utils_py.html  z_a22159226805e104_admin_py.html  z_a22159226805e104_apps_py.html  z_a22159226805e104_models_py.html  z_a22159226805e104_views_py.html  z_af6120810f5f9c48___init___py.html  z_af6120810f5f9c48_cache_py.html  z_af6120810f5f9c48_s3_py.html  z_bf139fc8a65e8a08___init___py.html  z_bf139fc8a65e8a08_settings_py.html  z_bf139fc8a65e8a08_urls_py.html  z_bf139fc8a65e8a08_wsgi_py.html  z_ecea13ffaf4b135a_ensure_db_py.html  (+3 more)
infra/copilot/environments/addons/: postgres.yml  redis.yml
infra/copilot/streamlit/: manifest.yml
infra/copilot/streamlit/addons/: s3-marts-access-policy.yml
infra/copilot/web/: manifest.yml
infra/copilot/web/addons/: postgres-web.yml
pems/: settings.py
pems/clearinghouse/: admin.py  apps.py  models.py
pems/clearinghouse/migrations/: 0001_initial.py
pems/districts/templates/districts/: district.html  index.html
pems/streamlit_sample/: apps.py
pems/streamlit_sample/templates/streamlit_sample/: index.html
pems_data/: pyproject.toml
pems_data/src/pems_data/: __init__.py  cache.py  cli.py  s3.py  serialization.py  stations.py
pems_data/src/pems_data/services/: stations.py
pems_data/src/pems_data/sources/: __init__.py  base.py  cache.py  s3.py
pems_streamlit/: pyproject.toml
pems_streamlit/container/: Dockerfile  entrypoint.sh  run.py
pems_streamlit/src/pems_streamlit/: main.py  utils.py
pems_streamlit/src/pems_streamlit/apps/districts/: app_stations.py
pems_streamlit/src/pems_streamlit/apps/stations/: app_stations.py
pems_streamlit/src/pems_streamlit/components/: map_station_summary.py  map_summary.py  plot_5_min_traffic_data.py
pems_web/: pyproject.toml
pems_web/container/: Dockerfile
pems_web/src/pems_web/: __init__.py  settings.py  urls.py  wsgi.py
pems_web/src/pems_web/clearinghouse/: apps.py
pems_web/src/pems_web/core/: context_processors.py
pems_web/src/pems_web/core/templates/core/: base.html
pems_web/src/pems_web/districts/: apps.py  urls.py
pems_web/src/pems_web/districts/templates/districts/: district.html  index.html
pems_web/src/pems_web/static/css/: styles.css
search/: search_index.json
streamlit_app/: Dockerfile  entrypoint.sh  main.py  requirements.txt  utils.py
streamlit_app/apps/stations/: app_stations.py
tests/pytest/: run.sh  settings.py
tests/pytest/pems/: conftest.py
tests/pytest/pems/clearinghouse/: test_models.py
tests/pytest/pems/core/: test_context_processors.py
tests/pytest/pems/core/management/commands/: test_ensure_db.py
tests/pytest/pems_data/: conftest.py  test_cache.py  test_init.py  test_s3.py  test_serialization.py  test_stations.py
tests/pytest/pems_data/services/: test_stations.py
tests/pytest/pems_data/sources/: test_base.py  test_cache.py  test_init.py  test_s3.py
tests/pytest/pems_streamlit/: test_utils.py
tests/pytest/pems_web/: conftest.py  test_settings.py
tests/pytest/pems_web/core/: test_middleware_healthcheck.py
tests/pytest/pems_web/districts/: test_views.py
tests/pytest/streamlit_app/: test_main.py
