[project]
name = "pems_data"
description = "Common data access library for PeMS."
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = ["boto3==1.39.7", "pandas==2.3.0"]

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pems_data*"]
namespaces = false

[tool.setuptools_scm]
# Tell scm to look one directory up for the .git folder
root = ".."
