[project]
name = "pems_streamlit"
description = "The Streamlit application for PeMS data visualizations."
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "django==5.2.3",
    "pems_data @ file:./pems_data",
    "streamlit==1.45.1",
]

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pems_streamlit*"]
namespaces = false

[tool.setuptools.package-data]
pems_streamlit = ["*.txt"]

[tool.setuptools_scm]
# Tell scm to look one directory up for the .git folder
root = ".."
